# edu_robot_control

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  makefile
docker/arthur/: docker-compose.yaml
docker/arthur/launch_content/: arthur_monitor.launch.py
docker/eduart-robot-control/: Dockerfile  makefile
docker/host/: Dockerfile  makefile
docker/image/: Dockerfile  entrypoint  makefile
docker/iot2050/: Dockerfile  makefile
docker/ipc127e/: Dockerfile  docker-compose.yaml  makefile
docker/linux_joy/: Dockerfile  makefile
docker/linux_kernel_6/: docker-compose.yaml
docker/linux_kernel_6/launch_content/: arthur_monitor.launch.py
docker/sdl_joy/: Dockerfile  docker-compose.yaml  makefile
launch/: arthur_robot_description.launch.py  eduard-monitor.launch.py  eduard_monitor.launch.py  eduard_monitor_nav2.launch.py  eduard_robot_description.launch.py  robot_remote_control.launch.py  robot_remote_control_iot2050.launch.py  robot_remote_control_ipc127e.launch.py  robot_remote_control_lifetwin.launch.py  robot_remote_control_raspberry.launch.py
model/mesh/: mecanum-wheel-left-eduard.dae  mecanum-wheel-right-eduard.dae  offroad-wheel-eduard.dae
model/urdf/: arthur.urdf  eduard.urdf
parameter/: arthur.rviz  eduard.rviz  eduard_ros2_control_iot2050.yaml  eduart-nav2.rviz  hid_joy_remote_control.yaml  remote_control.yaml  remote_control_kernel_5.yaml
src/: activation_function.h  remote_control.cpp  remote_control.hpp  set_mode.cpp  set_mode.h
